Cotent added to readme file and final comments will be added on ather files

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+#host and port where you app will run(http://localhost:3000)
 host = 'localhost'
 port = 3000
 
+
+#Database connection URL
 dB_url = 'mongodb://localhost:27017/youseai'
+
+#CryptoJS password hashing secret key
 PASS_KEY = 'youseai'
+
+#JWT Token secret key
 JWT_KEY = 'youseai'
